--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"next": "^14.2.17",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^5.0.1",
+		"react-icon": "^1.0.0",
+		"react-icons": "^5.4.0",
 		"react-loader-spinner": "^6.1.6",
 		"react-redux": "^9.1.0",
 		"react-spinners": "^0.13.8",
